--- a/Ass6/home.html
+++ b/Ass6/home.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body bgcolor=#FFFFE0>
+<body bgcolor=#ADEED8>
 
 <h1>Solution to Assignment Number : 6</h1>
 <h2>This is <i>home.html</i> Webpage</h2>
 <h3> If the user is ideal for 10 seconds, the logout.html page will be loaded.</h3>
 <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam culpa nostrum libero obcaecati! Quisquam harum non sed impedit earum error velit dolorum repellendus? Qui delectus id ducimus corporis eius quia!
+    Hi! I'm Suvajit Sadhukhan
 </p>
 <script src="app6.js"></script>
 </body>
