--- a/Ass12/12.html
+++ b/Ass12/12.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 
-<body bgcolor=#FFFFE0>
+<body bgcolor=#C3C3C3>
 
     <h1>Solution to Assignment Number : 12</h1>
 
@@ -21,9 +21,9 @@
     <svg width="500" height="500">
         <ellipse cx="250" cy="250" rx="125" ry="35" stroke="blue" stroke-width="3" fill="none" />
         <ellipse cx="250" cy="250" rx="125" ry="35" stroke="blue" stroke-width="3" fill="none"
-            transform="rotate(45, 250, 250)" />
+            transform="rotate(60, 250, 250)" />
         <ellipse cx="250" cy="250" rx="125" ry="35" stroke="blue" stroke-width="3" fill="none"
-            transform="rotate(315, 250, 250)" />
+            transform="rotate(120, 250, 250)" />
     </svg>
 
 </body>
